[gd_scene load_steps=3 format=3 uid="uid://8y04kasex5c7"]

[ext_resource type="Theme" uid="uid://bvnvlu0pc2dw8" path="res://UI/Themes/theme_dark.tres" id="1"]
[ext_resource type="Script" path="res://UI/Dialogs/DeletePaletteDialog.gd" id="2"]

[node name="DeletePaletteDialog" type="Window"]
exclusive = true
theme = ExtResource("1")
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Container" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Container"]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 21.0
text = "DELETE_PALETTE_DIALOG_TEXT"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Container"]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -25.0
size_flags_vertical = 0

[node name="DeleteButton" type="Button" parent="MarginContainer/Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "DELETE"

[node name="CancelButton" type="Button" parent="MarginContainer/Container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CANCEL"

[connection signal="about_to_popup" from="." to="." method="_on_DeletePaletteDialog_about_to_show"]
[connection signal="pressed" from="MarginContainer/Container/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="MarginContainer/Container/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
